--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"/>
     <title>Counter</title>
 </head>
 <body>
     <div id="app">
         <div id="container">
-            <div>Title</div>
-            <div>Count</div>
-            <div>Buttons
-               <button></button>
-               <button></button>
-               <button></button>
+            <div><h1>Counter</h1></div>
+            <div id="theCount">0</div>
+            <div id="buttons">
+               <button>decrease</button>
+               <button>reset</button>
+               <button>increase</button>
             </div>
         </div>
     </div>
-
+<script src="counter.js"></script>
 </body>
 </html>
